# A-TEAM

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  config.toml  pyproject.toml
ateam/: __init__.py  __main__.py  cli.py  config.py  events.py  intervention.py
ateam/agents/: architect.py  base.py  intervention.py  orchestrator.py  planner.py  reviewer.py  worker.py
ateam/dashboard/: __init__.py  index.html  server.py
ateam/llm/: __init__.py  base.py  message_types.py  openrouter.py
ateam/prompts/: architect.md  intervention.md  planner.md  reviewer.md  reviewer_batch.md  worker_backend.md  worker_database.md  worker_devops.md  worker_frontend.md
ateam/state/: __init__.py  phase.py  project_state.py
ateam/tools/: __init__.py  base.py  file_ops.py  search.py  shell.py  web.py
tests/: test_plan_validation.py
